🚀 DS-AutoAdvisor v3.0: Complete Pipeline with Production Ready Features
🎯 MAJOR UPDATES:
✅ Unified Configuration System (v3) - fast/custom modes
✅ Simplified Production Pipeline (03_full_pipeline.py)
✅ MLflow Integration - experiment tracking & artifact management
✅ Enhanced Documentation - user-friendly guides with clear workflows

📝 CORE IMPROVEMENTS:
• 02_stage_testing.py: Enhanced iterative development with stage isolation
• 03_full_pipeline.py: NEW - Production artifact generation from validated models
• MLflow integration: Fixed imports, proper experiment tracking
• Unified config v3: Streamlined fast/custom configuration modes

🗂️ INFRASTRUCTURE:
• utils/ directory: Centralized utility functions
• Enhanced source modules: Improved data cleaning, training, evaluation
• Archive system: Preserved old versions for reference
• Comprehensive .gitignore: Clean repository with output exclusion

📖 DOCUMENTATION:
• README.md: Complete workflow guide with troubleshooting
• QUICK_START.md: 15-minute CSV-to-models tutorial
• Clear limitation explanations and future roadmap

🧹 CLEANUP:
• Removed all pipeline outputs from tracking
• Cleaned cache and temporary files
• Organized configuration files by version

🎉 READY FOR PRODUCTION:
From CSV to deployed models in 15 minutes with full traceability!

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-# Python
+# =============================================================================
+# DS-AutoAdvisor .gitignore
+# Keep only essential scripts, configs, and documentation
+# Ignore all outputs, generated files, and temporary data
+# =============================================================================
+
+# Python Environment
 __pycache__/
 *.py[cod]
 *$py.class
@@ -8,31 +14,147 @@ env/
 venv/
 .venv/
 ENV/
+.env
 
-# Data files (optional - you might want to include sample data)
-data/*.csv
-data/*.json
+# =============================================================================
+# PIPELINE OUTPUTS (IGNORE ALL GENERATED CONTENT)
+# =============================================================================
 
-# Logs and temporary files
+# All pipeline output directories
+pipeline_outputs/
+cache/
+metadata/
+
+# MLflow tracking and experiments
+mlruns/
+mlflow_ui.sh
+
+# Logs and audit trails
+logs/
 *.log
+audit.log
+model_analysis.log
 temp_*
 *.tmp
+
+# =============================================================================
+# DATA FILES (IGNORE INPUT DATA)
+# =============================================================================
+
+# Raw data (keep structure but ignore actual files)
+data/*.csv
+data/*.json
+data/*.xlsx
+data/*.parquet
+data/*.txt
+data/*.tsv
+
+# Processed data
+cleaned_data.csv
+*_cleaned.csv
+*_processed.*
+
+# =============================================================================
+# MODEL ARTIFACTS (IGNORE ALL TRAINED MODELS)
+# =============================================================================
 
 # Model files
 models/
 *.pkl
 *.joblib
+*.h5
+*.pb
+*.onnx
+*.bin
 
-# IDE
+# Model evaluation outputs
+evaluation_results/
+reports/
+
+# =============================================================================
+# GENERATED DOCUMENTATION & CONFIGS (IGNORE GENERATED)
+# =============================================================================
+
+# Generated docs (keep templates, ignore generated)
+docs/data_profiling_report.html
+docs/raw_profiling_data.json
+docs/cleaning_config_template.yaml
+docs/*.html
+docs/*.json
+
+# Auto-generated configs (keep base configs)
+config/*_generated.yaml
+config/*_updated.yaml
+config/pipeline_config_updated.yaml
+
+# =============================================================================
+# DEVELOPMENT & IDE
+# =============================================================================
+
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+.spyderproject
+.spyproject
 
-# OS
+# Jupyter Notebooks
+.ipynb_checkpoints/
+*.ipynb
+
+# =============================================================================
+# SYSTEM FILES
+# =============================================================================
+
+# OS files
 .DS_Store
 Thumbs.db
+.directory
 
-# Jupyter Notebooks checkpoints
-.ipynb_checkpoints/
+# Temporary files
+*.bak
+*.backup
+*~
+.#*
+
+# =============================================================================
+# DEPLOYMENT & DISTRIBUTION
+# =============================================================================
+
+# Distribution builds
+build/
+dist/
+*.egg-info/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# =============================================================================
+# SECURITY & SENSITIVE DATA
+# =============================================================================
+
+# Environment variables and secrets
+.env
+.env.local
+.env.*.local
+*.key
+*.pem
+config.ini
+
+# =============================================================================
+# WHAT TO KEEP (ESSENTIAL PROJECT FILES)
+# =============================================================================
+# ✅ Core scripts: 01_data_discovery.py, 02_stage_testing.py, 03_full_pipeline.py
+# ✅ Source code: src/, utils/
+# ✅ Base configs: config/unified_config_v3.yaml, config/business_*.yaml
+# ✅ Documentation: README.md, QUICK_START.md
+# ✅ Setup: requirements.txt, pyproject.toml, uv.lock
+# ✅ Archive: archive/ (for reference)
+# ✅ Sample data structure: data/ (empty folders)
+# 
+# ❌ All pipeline outputs, logs, generated configs, trained models
+# ❌ MLflow runs, cache, temporary files
+# ❌ IDE settings, OS files, Python cache
 
